# sftt

./: .cache_port  .gitignore  Makefile  README.md  issues  meson.build
client/: .cache_port  Makefile  client  client.c  main.c  meson.build
conf/: sftt_client.conf  sftt_server.conf
config/: Makefile  README.md  gen_config  gen_config.c  meson.build  sftt_client.conf  sftt_deconfig  sftt_server.conf
db/: user.db
debug/: server.i
head/: bits.h  btree.h  client.h  cmdline.h  command.h  compiler.h  compress.h  config.h  connect.h  debug.h  destroy.h  dlist.h  encrypt.h  errno.h  file.h  huffman.h  log.h  map.h  math64.h  md5.h  mem_pool.h  memory_pool.h  net_trans.h  option.h  packet.h  queue.h  random_port.h  serialize.h  server.h  server_func.h  session.h  stack.h  strings.h  user.h  utils.h  validate.h  xdr.h
include/: atomic.h  autoconf.h  base.h  bits.h  btree.h  client.h  cmdline.h  command.h  common.h  compiler.h  compress.h  config.h  connect.h  context.h  db.h  debug.h  destroy.h  dir.h  dlist.h  encode.h  encrypt.h  endpoint.h  file.h  file_trans.h  friend.h  lock.h  log.h  map.h  math64.h  md5.h  mem_pool.h  msg_queue.h  msq_thread.h  net_trans.h  option.h  packet.h  per_lcore.h  priority_list.h  progress_viewer.h  queue.h  (+31 more)
server/: .server.c.swp  Makefile  main.c  meson.build  server  server.c
src/: .encrypt.c.swp  Makefile  bits.c  btree.c  client.c  cmdline.c  command.c  compress.c  config.c  connect.c  context.c  db.c  debug.c  destroy.c  dir.c  dlist.c  encode.c  encrypt.c  endpoint.c  file.c  file_recv.c  file_send.c  file_trans.c  huffman.c  lock.c  log.c  map.c  md5.c  mem_pool.c  memory_pool.c  meson.build  mkdirp.c  msg_queue.c  msq_thread.c  net_trans.c  option.c  packet.c  path-normalize.c  progress_viewer.c  queue.c  (+36 more)
test/: .sizeof.c.swp  Makefile  Run  a.out  binary_encrypt.c  bool.c  check_file.sh  check_system.c  cmdline.c  db.c  file_op.c  get_char.c  net.c  parse_command.c  pointer.c  run_bg.c  serialize.c  sizeof.c  strtest  strtest.c  test.c  type_cast.c  var_list.c
test/basic/: Makefile  client_task.c  compress.c  db.c  debug.c  dlist.c  file.c  list.c  md5.c  mem_pool.c  net_trans.c  options.c  priority_list.c  progress_viewer.c  pthread.c  readline.c  resp.c  serialize.c  strops.c  thread_pool.c  utils.c
test/funcs/: .Makefile.swp  Makefile  client_task.c  fwd_get.c  fwd_ll.c  fwd_put.c  get.c  put.c  update_port.c
test/scripts/: gettest  mps  puttest
test/testcases/: basic  dlist  trans
test/testcases/basic/: dlist  list  priority_list  strops  thread_pool
test/testcases/funcs/: fwd_get  fwd_put  get  put
tool/: add_copyright.c  clear_cache_port.sh
tools/: Makefile  add_copyright  meson.build  mp_stat.c
xdr/: Makefile  gen_serialize.c  gen_serialize_raw  gen_serialize_raw.c  gen_trans.c  list.h  meson.build  req_resp.x  req_rsp.x  xdr.x
